<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/display"
            android:textSize="65sp"
            android:textDirection="locale"
            android:textAlignment="textEnd"
            android:singleLine="true"
            android:gravity="bottom"
            android:textColor="@color/black"
            android:paddingBottom="20dp"
            android:ellipsize="none"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            tools:ignore="RtlCompat" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/background"
            android:orientation="horizontal">

            <Button
                android:id="@+id/clear"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="0.25"
                android:background="@android:color/transparent"
                android:text="@string/clear"
                android:textColor="#468499"
                android:textSize="26sp" />

            <Button
                android:id="@+id/power"
                android:layout_width="0dp"
                android:layout_weight="0.25"
                android:layout_height="100dp"
                android:background="@android:color/transparent"
                android:textColor="#468499"
                android:textSize="26sp"
                android:text="@string/power"/>

            <Button
                android:id="@+id/percentage"
                android:layout_width="0dp"
                android:layout_weight="0.25"
                android:layout_height="100dp"
                android:background="@android:color/transparent"
                android:textColor="#468499"
                android:textSize="26sp"
                android:text="@string/percentage"/>

            <Button
                android:id="@+id/div"
                android:layout_width="0dp"
                android:layout_weight="0.25"
                android:layout_height="100dp"
                android:background="@android:color/transparent"
                android:textColor="#ffb6c1"
                android:textSize="32sp"
                android:text="@string/div"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/background"
            android:orientation="horizontal">

            <Button
                android:id="@+id/num_7"
                android:layout_width="0dp"
                android:layout_weight="0.25"
                android:layout_height="100dp"
                android:background="@android:color/transparent"
                android:textColor="@color/black"
                android:textSize="26sp"
                android:text="@string/number_7"/>

            <Button
                android:id="@+id/num_8"
                android:layout_width="0dp"
                android:layout_weight="0.25"
                android:layout_height="100dp"
                android:background="@android:color/transparent"
                android:textColor="@color/black"
                android:textSize="26sp"
                android:text="@string/number_8"/>

            <Button
                android:id="@+id/num_9"
                android:layout_width="0dp"
                android:layout_weight="0.25"
                android:layout_height="100dp"
                android:background="@android:color/transparent"
                android:textColor="@color/black"
                android:textSize="26sp"
                android:text="@string/number_9"/>

            <Button
                android:id="@+id/product"
                android:layout_width="0dp"
                android:layout_weight="0.25"
                android:layout_height="100dp"
                android:background="@android:color/transparent"
                android:textColor="#ffb6c1"
                android:textSize="32sp"
                android:text="@string/multiply"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/background"
            android:orientation="horizontal">

            <Button
                android:id="@+id/num_4"
                android:layout_width="0dp"
                android:layout_weight="0.25"
                android:layout_height="100dp"
                android:background="@android:color/transparent"
                android:textColor="@color/black"
                android:textSize="26sp"
                android:text="@string/number_4"/>

            <Button
                android:id="@+id/num_5"
                android:layout_width="0dp"
                android:layout_weight="0.25"
                android:layout_height="100dp"
                android:background="@android:color/transparent"
                android:textColor="@color/black"
                android:textSize="26sp"
                android:text="@string/number_5"/>

            <Button
                android:id="@+id/num_6"
                android:layout_width="0dp"
                android:layout_weight="0.25"
                android:layout_height="100dp"
                android:background="@android:color/transparent"
                android:textColor="@color/black"
                android:textSize="26sp"
                android:text="@string/number_6"/>

            <Button
                android:id="@+id/minus"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="0.25"
                android:background="@android:color/transparent"
                android:text="@string/minus"
                android:textColor="#ffb6c1"
                android:textSize="32sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/background"
            android:orientation="horizontal">

            <Button
                android:id="@+id/num_1"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="0.25"
                android:background="@android:color/transparent"
                android:text="@string/number_1"
                android:textColor="@color/black"
                android:textSize="26sp" />

            <Button
                android:id="@+id/num_2"
                android:layout_width="0dp"
                android:layout_weight="0.25"
                android:layout_height="100dp"
                android:background="@android:color/transparent"
                android:textColor="@color/black"
                android:textSize="26sp"
                android:text="@string/number_2"/>

            <Button
                android:id="@+id/num_3"
                android:layout_width="0dp"
                android:layout_weight="0.25"
                android:layout_height="100dp"
                android:background="@android:color/transparent"
                android:textColor="@color/black"
                android:textSize="26sp"
                android:text="@string/number_3"/>

            <Button
                android:id="@+id/plus"
                android:layout_width="0dp"
                android:layout_weight="0.25"
                android:layout_height="100dp"
                android:background="@android:color/transparent"
                android:textColor="#ffb6c1"
                android:textSize="32sp"
                android:text="@string/plus"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/background"
            android:orientation="horizontal">


            <Button
                android:id="@+id/num_0"
                android:layout_width="0dp"
                android:layout_weight="0.25"
                android:layout_height="100dp"
                android:background="@android:color/transparent"
                android:textColor="@color/black"
                android:textSize="26sp"
                android:text="@string/number_0"/>

            <Button
                android:id="@+id/dot"
                android:layout_width="0dp"
                android:layout_weight="0.25"
                android:layout_height="100dp"
                android:background="@android:color/transparent"
                android:textColor="@color/black"
                android:textSize="26sp"
                android:text="@string/dot"/>

            <ImageButton
                android:id="@+id/delete"
                android:layout_width="0dp"
                android:layout_weight="0.25"
                android:layout_height="100dp"
                android:background="@android:color/transparent"
                android:textColor="@color/black"
                android:textSize="26sp"
                android:src="@drawable/ic_del"/>

            <Button
                android:id="@+id/equals"
                android:layout_width="0dp"
                android:layout_weight="0.25"
                android:layout_height="100dp"
                android:background="@android:color/transparent"
                android:textColor="#ffb6c1"
                android:textSize="32sp"
                android:text="@string/result"/>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>